travis: added sleep to wait until apt is available

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: go
 dist: xenial
 sudo: required
 script:
+  - sleep 10
   - go build startup.go
   - sudo ./startup
   - go test -v startup_test.go
