--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,8 @@ jobs:
       uses: actions/checkout@v1
     - name: Get dependencies
       run: go get -v -t -d ./...
+    - name: Setup tmate session
+      uses: mxschmitt/action-tmate@v1
     - name: Run Installer
       run: |
         go build startup.go
