--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,9 @@ on:
   pull_request:
   workflow_dispatch:
 
+env:
+  DISCORD_TOKEN: ${{ secrets.SINUSBOT_DISCORD_CI }}
+
 jobs:
   test:
     name: Test on ${{ matrix.os }}
