--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
       run: |
         go build startup.go
         sudo ./startup
-    - name: Export Discord Token
-      run: echo ${{ secrets.SINUSBOT_DISCORD_CI }} > .discord
     - name: Run Tests
       run: go test -v startup_test.go
+      env:
+        DISCORD_KEY: ${{ secrets.SINUSBOT_DISCORD_CI }}
