fix: token export

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,9 @@ jobs:
         go build startup.go
         sudo ./startup
     - name: Export Discord Token
-      run: echo ${{ secrets.SINUSBOT_DISCORD_CI }} > .discord
+      run: 'echo "$DISCORD_KEY" > .discord'
+      shell: bash
+      env:
+        DISCORD_KEY: ${{ secrets.SINUSBOT_DISCORD_CI }}
     - name: Run Tests
       run: go test -v startup_test.go
