--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,10 @@
-name: CI
+name: "Test CI"
+
 on:
   push:
-    branches: [ master ]
   pull_request:
-    branches: [ master ]
+  workflow_dispatch:
+
 jobs:
   test:
     name: Test on ${{ matrix.os }}
@@ -14,11 +15,11 @@ jobs:
         os: [ubuntu-18.04, ubuntu-20.04, ubuntu-22.04]
     steps:
     - name: Set up Go
-      uses: actions/setup-go@v1
+      uses: actions/setup-go@v3
       with:
         go-version: 1.13
     - name: Check out code into the Go module directory
-      uses: actions/checkout@v1
+      uses: actions/checkout@v3
     - name: Get dependencies
       run: go get -v -t -d ./...
     - name: Run Installer
@@ -27,3 +28,5 @@ jobs:
         sudo ./startup
     - name: Run Tests
       run: go test -v startup_test.go
+      env:
+        DISCORD_KEY: ${{ secrets.SINUSBOT_DISCORD_CI }}
